Archive2/d5/4be4e8410c0a7f/output
main.cpp:1:12: error: 'auto' not allowed in function prototype
auto Wrong(auto i) {
           ^~~~
1 error generated.
